kotlin-spring/feed/src/main/kotlin/com/example/feed/global/error/response/ErrorResponse.kt
package com.example.feed.global.error.response

interface ErrorResponse {

    val status: Int
    val message: String
}